--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author: owikle
 # e.g. relative path "/assets/demo-metadata.csv"
 # e.g. published google sheet "https://docs.google.com/spreadsheets/d/e/2PACX-1vSn7AA-cbsXT3_nNUGftc1ab-CKXOJHMQCIENeR9NHElbyI9_qA99o0-HNZdG04v-M2_N21bUe_krQQ/pub?output=csv"
 # e.g. on GitHub use the raw link "https://raw.githubusercontent.com/CollectionBuilder/collectionbuilder-sample-data/main/psychiana_cbdemo_gh.csv"
-metadata-csv: https://docs.google.com/spreadsheets/d/e/2PACX-1vSHKX_x0JnsCLXXXlFYeuqN8ZMebibE13RCi-6JEDg4b8c_kHn89M1pCkgWbwwSpoif3dpE0PvjRrvQ/pub?output=csv 
+metadata-csv: /assets/psychiana-demo.csv
 
 ##########
 # Site/Organization Branding 
